# option_into_controlflow

./: Cargo.toml  README.md  bisect_msrv.sh
.github/workflows/: check-and-lint.yaml  crates-publish.yml
examples/: select.rs
examples/select/: Cargo.toml
src/: lib.rs
