[package]
name = "option_into_controlflow"
description = "Option into ControlFlow conversion"
authors = ["Michał Trybus <komar007@gmail.com>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/komar007/option_into_controlflow"
readme = "README.md"
documentation = "https://docs.rs/option_into_controlflow"

categories = ["rust-patterns", "no-std"]
keywords = ["option", "control-flow", "conversion"]

version = "1.0.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "time", "signal"] }
tokio-util = "0.7"
